# nmlinkd

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  mapping.rs  state.rs
src/netlink/: mod.rs  monitor.rs  queries.rs
src/nm/: active_connection.rs  device.rs  ip_config.rs  manager.rs  mod.rs  settings.rs  settings_connection.rs  signals.rs
